--- a/AOAI/week5_analysis_prediction/aoai_week5.ipynb
+++ b/AOAI/week5_analysis_prediction/aoai_week5.ipynb
@@ -12,6 +12,21 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Normalization\n",
+    "\n",
+    "Could be good or bad on the model <br>\n",
+    "\n",
+    "Min_Max: Usually puts the values between 0 and 1\n",
+    "\n",
+    "Standard Scaling: Ensures that the data has a Mean of 0, and Standard Deviation of 1."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
