--- a/AOAI/assignments/csv_parsing_pset1/csv_parsing_assignment.ipynb
+++ b/AOAI/assignments/csv_parsing_pset1/csv_parsing_assignment.ipynb
@@ -32,7 +32,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Import Data\n",
+    "# Import Data.\n",
     "Use A Dictionary. Create A Default Dictionary. First iterate Through The First Sentence\n",
     "In The Text File Which Will Include The Headers. Save The As Keys In The Default Dictionary\n",
     "Go To The Next Sentence. The First Word Corresponds To The Column\n",
